--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,4 @@
-$primary-color: #5d6c8c;
+$primary-color: #7722ff;
 @mixin hidden {
   position: absolute;
   width: 0;
@@ -27,6 +27,12 @@ a {
 .container {
   width: 1280px;
   margin: 0 auto;
+}
+
+.Initializing {
+  line-height: 700px;
+  display: block;
+  text-align: center;
 }
 
 footer {
